style.css
/* ... */
@media screen and (min-width: 1025px) {
    /* line 43, sass/layout/_footer.scss */
    .site-footer .footer-socials-widgetarea {
        margin-top: 0;
    }
}
/* line 51, sass/layout/_footer.scss */
.site-footer .footer-info-widgetarea {
    margin-top: 28px;
}
/* line 57, sass/layout/_footer.scss */
.site-footer a {
    color: white;
    text-decoration: none;
}
/* line 62, sass/layout/_footer.scss */
.site-footer ul.mks_social_widget_ul {
    margin: 0;
    padding-left: 0;
}
/* line 66, sass/layout/_footer.scss */
.site-footer ul.mks_social_widget_ul a {
    background-color: white;
}
/* line 70, sass/layout/_footer.scss */
.site-footer ul.mks_social_widget_ul a:before {
    color: var(--miles_primary_dark);
}
/* line 1, sass/layout/_header.scss */
.site-header {
    background-color: var(--miles_primary_dark);
    color: white;
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 999;
}

.site-header .site-header-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 var(--mobile-horizontal-space);
}

.site-header .site-header-container a:hover,
.site-header .site-header-container a:active,
.site-header .site-header-container a:focus {
    background-color: transparent !important;
}

@media (min-width: 768px) {
    /* line 11, sass/layout/_header.scss */
    .site-header .site-header-container {
        width: var(--page-wrap);
        margin: auto;
    }
}
/* line 22, sass/layout/_header.scss */
.site-header .site-branding {
    padding-top: .75rem;
    padding-bottom: .75rem;
}
/* line 30, sass/layout/_header.scss */
.site-header .site-description,
.site-header .site-title {
    display: none;
}

.site-header .site-branding a[rel='home'] {
    display: flex;
    z-index: 50;
}

@media screen and (max-width: 900px) and (orientation: landscape) {
    .site-header .site-branding a[rel='home'] {
        position: absolute;
    }
}

.open-menu .fixed {
    mix-blend-mode: normal;
}
/* line 49, sass/layout/_header.scss */
.open-menu .fixed .miles-logo .st0 {
    fill: white;
}
#wpadminbar {
    position: fixed !important;
}

/* line 66, sass/layout/_header.scss */
.fixed .cities-navigation {
    display: none;
}

/* line 74, sass/layout/_header.scss */
.miles-logo .st0 {
    fill: #fff;
}

/* line 79, sass/layout/_header.scss */
.fixed .miles-logo .st0 {
    fill: var(--miles_primary_dark) !important;
}
@media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
    /* line 79, sass/layout/_header.scss */
    .fixed .miles-logo .st0 {
        fill: var(--miles_primary_dark);
    }
}

/* line 1, sass/layout/_grid.scss */
.site-main {
    margin-bottom: 6rem;
    min-height: 100vh;
    overflow-x: hidden;
}

.site-main > p,
.pre-entry-content > p,
.wp-block-group .wp-block-group__inner-container > p {
    max-width: 70rem;
}

/*--------------------------------------------------------------
## block widths
--------------------------------------------------------------*/
/* line 20, sass/layout/_grid.scss */
.search-container,
.error-404,
.entry-content {
    max-width: 100svw;
    padding: 0 var(--mobile-horizontal-space);
}

.site-main .type-page .entry-content {
    margin-top: 3rem;
}
@media (min-width: 768px) {
    .search-container,
    .error-404,
    .entry-content {
        margin: 0 auto;
        width: var(--page-wrap);
    }

    .site-main .type-page .entry-content {
        margin-top: 6rem;
    }
}

.entry-content > miles-banner {
    width: 100dvw;
    transform: translateX(-50%);
    position: relative;
    left: 50%;
}

.entry-content > miles-banner:first-child {
    margin-top: -3rem;
}

@media (min-width: 768px) {
    .entry-content > miles-banner:first-child {
        margin-top: -6rem;
    }
}

.entry-content miles-image-slider {
    width: 100dvw;
    transform: translateX(-50%);
    position: relative;
    left: 50%;
}

.pre-entry-content {
    margin: 6rem auto 0;
    padding: 0 var(--mobile-horizontal-space);
    width: var(--page-wrap);
}

/* line 33, sass/layout/_grid.scss */
.alignfull,
.custom-block-feature-block {
    max-width: 100%;
    width: 100%;
}

@media (min-width: 768px) {
    /* line 59, sass/layout/_grid.scss */
    *[class*='__inner-container'] {
        max-width: calc((var(--content_width) / 3) * 2);
        margin-right: auto;
        margin-left: auto;
    }
}

/*--------------------------------------------------------------
## block vertical margins & paddings
--------------------------------------------------------------*/
/* line 77, sass/layout/_grid.scss */
*[class*=' wp-block'] > *[class*=' wp-block'],
*[class^='wp-block'] > *[class^='wp-block'] {
    margin-top: 0;
    margin-bottom: 0;
}

/* line 85, sass/layout/_grid.scss */
*[class*='wp-block-column'] > *[class*=' wp-block-column'],
*[class^='wp-block-column'] > *[class^='wp-block-column'] {
    margin-top: 0;
    margin-bottom: 0;
}

/* line 95, sass/layout/_grid.scss */
.has-background *[class*='__inner-container'],
.has-background-dim *[class*='__inner-container'] {
    padding-top: 28px;
    padding-bottom: 28px;
}
@media (min-width: 768px) {
    /* line 95, sass/layout/_grid.scss */
    .has-background *[class*='__inner-container'],
    .has-background-dim *[class*='__inner-container'] {
        padding-top: 56px;
        padding-bottom: 56px;
    }
}
@media (min-width: 1025px) {
    /* line 95, sass/layout/_grid.scss */
    .has-background *[class*='__inner-container'],
    .has-background-dim *[class*='__inner-container'] {
        padding-top: 84px;
        padding-bottom: 84px;
    }
}

/* line 114, sass/layout/_grid.scss */
.wp-block-column > *:first-child {
    margin-top: 0;
}

/* line 118, sass/layout/_grid.scss */
.wp-block-cover__inner-container .has-text-align-center {
    margin-top: 0;
    margin-bottom: 0;
}
/* ... */

